js/js.translator/testData/incremental/invalidation/fileNameCaseClash/lib/f1.1.kt
package foo

fun test1() = test2()